5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1594_1801.log
== TEST (2019-03-29 17:09:40) 
-- CODE:
nomedoobjeto= porta
nderepeticoes= 5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomedoobjeto= porta
NameError: name 'porta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:09:56) 
-- CODE:
nomedoobjeto= ('porta')
nderepeticoes= 5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomedoobjeto= porta
NameError: name 'porta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:10:13) 
-- CODE:
nomedoobjeto= ('porta')
nderepeticoes= ('5')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomedoobjeto= porta
NameError: name 'porta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:10:23) 
-- CODE:
nomedoobjeto= ('porta')
nderepeticoes= (5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomedoobjeto= porta
NameError: name 'porta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:11:47) 
-- CODE:
nomedoobjeto= ('porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- OUTPUT:
portaporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:01) 
-- CODE:
nomedoobjeto= ('porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- OUTPUT:
portaporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:12:05) 
-- CODE:
nomedoobjeto= ('porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- EXECUTION TIME:
0.135998
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
portaporta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
portaporta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
portaporta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:18) 
-- CODE:
nomedoobjeto= ('Abra porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- OUTPUT:
Abra portaAbra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:40) 
-- CODE:
nomedoobjeto= ('Abra','','porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- OUTPUT:
('Abra', '', 'porta', 'Abra', '', 'porta')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:12:44) 
-- CODE:
nomedoobjeto= ('Abra','','porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- EXECUTION TIME:
0.219719
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
('Abra', '', 'porta', 'Abra', '', 'porta')
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
('Abra', '', 'porta', 'Abra', '', 'porta')
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
('Abra', '', 'porta', 'Abra', '', 'porta')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:45) 
-- CODE:
nomedoobjeto= ('Abra','','porta')
nderepeticoes= (5)
print(nomedoobjeto + nomedoobjeto)
-- OUTPUT:
('Abra', '', 'porta', 'Abra', '', 'porta')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:55) 
-- CODE:
print('Abra porta','','Abra porta')
-- OUTPUT:
Abra porta  Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:26) 
-- CODE:
print('Abra porta','','Abra porta','','Abra porta',)
-- OUTPUT:
Abra porta  Abra porta  Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:14:40) 
-- CODE:
print('Abra porta','','Abra porta','','Abra porta','','Abra porta')
-- EXECUTION TIME:
0.151906
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:14:42) 
-- CODE:
print('Abra porta','','Abra porta','','Abra porta','','Abra porta')
-- EXECUTION TIME:
0.214387
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:44) 
-- CODE:
print('Abra porta','','Abra porta','','Abra porta','','Abra porta')
-- OUTPUT:
Abra porta  Abra porta  Abra porta  Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:14:53) 
-- CODE:
print('Abra porta','','Abra porta','','Abra porta','','Abra porta')
-- EXECUTION TIME:
0.14193
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra porta  Abra porta  Abra porta  Abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:34) 
-- CODE:
print('Abra'+'porta')
-- OUTPUT:
Abraporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:45) 
-- CODE:
print('Abra',''+,'porta')
-- ERROR:
File "XXXX", line 1
    print('Abra',''+,'porta')
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:51) 
-- CODE:
print('Abra',+,'porta')
-- ERROR:
File "XXXX", line 1
    print('Abra',+,'porta')
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:18) 
-- CODE:
print('Abra',+,'porta')
-- ERROR:
File "XXXX", line 1
    print('Abra',+,'porta')
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:27) 
-- CODE:
print('Abra'+'porta')
-- OUTPUT:
Abraporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:31) 
-- CODE:
print('Abra' + 'porta')
-- OUTPUT:
Abraporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:29:15) 
-- CODE:
a = input('nome do objeto: ')
b = int(input('numero de repeticoes: '))

x = 'abra' + a
z = x*b
print(z)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:29:48) 
-- CODE:
a = input('nome do objeto: ')
b = int(input('numero de repeticoes: '))

x = ' abra ' + a
z = x*b
print(z)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:30:06) 
-- CODE:
a = input('nome do objeto: ')
b = int(input('numero de repeticoes: '))

x = ' abra ' + a
z = x*b
print(z)
-- EXECUTION TIME:
0.216986
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:30:25) 
-- CODE:
a = (input('nome do objeto: '))
b = int(input('numero de repeticoes: '))

x = ' abra ' + a
z = x*b
print(z)
-- EXECUTION TIME:
0.186152
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:30:48) 
-- CODE:
a = (input('nome do objeto: '))
b = int(input('numero de repeticoes: '))

x = ' abra ' + a
z = x*b
print(z)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:30:57) 
-- CODE:
a = (input('nome do objeto: '))
b = int(input('numero de repeticoes: '))

x = ' abra ' + a
z = x*b
print(z)
-- EXECUTION TIME:
0.172391
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:31:39) 
-- CODE:
a = (input('nome do objeto: '))
b = int(input('numero de repeticoes: '))

x = (' abra ' + a)
z = x*b
print(z)
-- EXECUTION TIME:
0.143646
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:31:42) 
-- CODE:
a = (input('nome do objeto: '))
b = int(input('numero de repeticoes: '))

x = (' abra ' + a)
z = x*b
print(z)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:32:14) 
-- CODE:
a = (input('nome do objeto: '))
b = int(input('numero de repeticoes: '))

x = (' Abra ' + a)
z = x*b
print(z)
-- EXECUTION TIME:
0.234619
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
